2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in: Don't generate version.h.
	* reconf: Don't run autoheader.

2004-09-10  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h (OCIE0B): Fix value. [Bug #10001]
	(OCIE0A): Ditto.
	(OCIE1B): Ditto.
	(OCIE1A): Ditto.
	(OCIE2B): Ditto.
	(OCIE2A): Ditto.

2004-09-10  Theodore A. Roth  <troth@openavr.org>
[Contributed by Rene Liebscher <R.Liebscher@gmx.de>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/pgmspace.h (PSTR): Fix to allow PSTR to work with C++.

2004-09-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	(CHECK_AVR_DEVICE): Don't supply main() in function block of
	AC_TRY_COMPILE since it is already provided.

2004-08-22  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* include/string.h (strsep): Remove __ATTR_PURE__, bug #10078.
	(strtok_r): Remove __ATTR_PURE__ too.
	(strncmp): Add __ATTR_PURE__.

2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
	* doc/examples/twitest/twitest.dox: Renumber annotations.

2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: rearrange demos into their own group.
	* doc/examples/demo/demo.dox: (Ditto)
	* doc/examples/twitest/twitest.dox: (Ditto)
	* doc/api/doxygen.config.in: include doc/examples in INPUT.
	* doc/examples/all-demos.dox: [new] Summary page for the demos.

2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Document realloc() internals.
	* include/stdlib.h: include realloc().
	* libc/stdlib/Makefile.am: include realloc.c.
	* libc/stdlib/malloc.c: move out shared parts to stdlib_private.h.
	* libc/stdlib/stdlib_private.h: [new] shared file for malloc()/realloc().
	* libc/stdlib/realloc.c: [new] implementation of realloc().

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
